fix connecting device steps alignment

--- a/src/styles/_exchange.scss
+++ b/src/styles/_exchange.scss
@@ -129,4 +129,8 @@
       color: #fff !important;
     }
   }
+
+  #connect-device-steps {
+    max-width: 475px;
+  }
 }
